--- a/video_language_detection/package.json
+++ b/video_language_detection/package.json
@@ -16,12 +16,13 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
+    "node-lame": "^1.3.2",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "video-to-audio": "^1.0.1",
-    "ytdl-core": "^4.11.4"
+    "ytdl-core": "^4.11.4",
+    "ytdl-mp3": "^3.1.0"
   }
 }
