--- a/video_language_detection/package.json
+++ b/video_language_detection/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "fluent-ffmpeg": "^2.1.2",
     "next": "13.4.7",
     "node-lame": "^1.3.2",
     "postcss": "8.4.24",
